Fixed CSS for contact form on mobile and added in subject input box

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -63,7 +63,7 @@ div#sayHello  #contactForm{
 #contactForm .flName {
     display: flex;
     flex-direction: row;
-    gap: 1em;
+    gap: 1;
 }
 
 #contactForm .formControl {
