--- a/src/css/main.css
+++ b/src/css/main.css
@@ -367,6 +367,7 @@
     #contactForm .flName {
         flex-direction: column;
         gap: 0;
+        width: 100%;
     }
 }
 
